refactor: 重构脚本，优化功能 fix: 修复农历闰月无法转换 feat: 可以修改生日类型对应生日 docs: 重写readme

--- a/Birthday/张三.md
+++ b/Birthday/张三.md
@@ -1,8 +1,9 @@
 ---
-birthdayType: Lunar
-birthdaySolar: 2000-01-01
-birthdayLunar: 1999年冬月廿五
-nextBirthday: 2024-12-25
+birthdaySolar: 1999-09-09
+birthdayLunar: 一九九九年七月三十
+birthdayType: 公历
+nextBirthday: 2025-09-09
+nextBirthdayString: 公历：2025-09-09 <span style="color:#086ddd">（对应农历：二〇二五年七月十八）</span>
 animal: 己卯年 兔
-zodiac: 摩羯座
+zodiac: 处女座
 ---
