--- a/Birthday/王五.md
+++ b/Birthday/王五.md
@@ -1,8 +1,9 @@
 ---
-birthdaySolar: 2011-08-29
-birthdayLunar: 2011年八月初一
-nextBirthday: 2025-08-29
-birthdayType: Solar
-animal: 辛卯年 兔
-zodiac: 处女座
+birthdaySolar: 2001-10-25
+birthdayLunar: 二〇〇一年九月初九
+birthdayType: 农历
+nextBirthday: 2025-10-29
+nextBirthdayString: 公历：2025-10-29 <span style="color:#086ddd">（对应农历：二〇二五年九月初九）</span>
+animal: 辛巳年 蛇
+zodiac: 天蝎座
 ---
