--- a/Resources/template/生日数据模板.md
+++ b/Resources/template/生日数据模板.md
@@ -1,6 +1,9 @@
 ---
 birthdaySolar: 
 birthdayLunar: 
+birthdayType: 公历
 nextBirthday: 
-birthdayType: Lunar
+nextBirthdayString: 
+animal: 
+zodiac: 
 ---
