--- a/Birthday/张飞.md
+++ b/Birthday/张飞.md
@@ -1,9 +1,9 @@
 ---
-birthdaySolar: 2022-03-01
-birthdayLunar: 二零二二年正月廿九
+birthdaySolar: 1970-01-01
+birthdayLunar: 二零二四年正月廿九
 birthdayType: 农历
 nextBirthday: 2025-02-26
 nextBirthdayString: 公历：2025-02-26 <span style="color:#086ddd">（对应农历：二〇二五年正月廿九）</span>
-animal: 壬寅年 虎
-zodiac: 双鱼座
+animal: 甲辰年 龙
+zodiac: 摩羯座
 ---
