fix(script): 第一次输入无法正确识别零

--- a/Birthday/张三.md
+++ b/Birthday/张三.md
@@ -3,7 +3,7 @@ birthdaySolar: 1999-09-09
 birthdayLunar: 一九九九年七月三十
 birthdayType: 公历
 nextBirthday: 2025-09-09
-nextBirthdayString: 公历：2025-09-09 <span style="color:#086ddd">（对应农历：二〇二五年七月十八）</span>
+nextBirthdayString: 公历：2025-09-09 <span style="color:#086ddd">（农历：二〇二五年七月十八）</span>
 animal: 己卯年 兔
 zodiac: 处女座
 ---
