--- a/Birthday/张飞.md
+++ b/Birthday/张飞.md
@@ -1,9 +1,9 @@
 ---
-birthdaySolar: 1970-01-01
+birthdaySolar: 2024-03-09
 birthdayLunar: 二零二四年正月廿九
 birthdayType: 农历
 nextBirthday: 2025-02-26
-nextBirthdayString: 公历：2025-02-26 <span style="color:#086ddd">（对应农历：二〇二五年正月廿九）</span>
+nextBirthdayString: 公历：2025-02-26 <span style="color:#086ddd">（农历：二〇二五年正月廿九）</span>
 animal: 甲辰年 龙
-zodiac: 摩羯座
+zodiac: 双鱼座
 ---
