--- a/Birthday/成龙.md
+++ b/Birthday/成龙.md
@@ -3,7 +3,7 @@ birthdaySolar: 1997-02-11
 birthdayLunar: 一九九七年正月初五
 birthdayType: 公历
 nextBirthday: 2025-02-11
-nextBirthdayString: 公历：2025-02-11 <span style="color:#086ddd">（对应农历：二〇二五年正月十四）</span>
+nextBirthdayString: 公历：2025-02-11 <span style="color:#086ddd">（农历：二〇二五年正月十四）</span>
 animal: 丁丑年 牛
 zodiac: 水瓶座
 ---
