--- a/Birthday/李雷.md
+++ b/Birthday/李雷.md
@@ -3,7 +3,7 @@ birthdaySolar: 1998-07-09
 birthdayLunar: 一九九八年闰五月十六
 nextBirthday: 2025-06-11
 birthdayType: 农历
-nextBirthdayString: 公历：2025-06-11 <span style="color:#086ddd">（对应农历：二〇二五年五月十六）</span>
+nextBirthdayString: 公历：2025-06-11 <span style="color:#086ddd">（农历：二〇二五年五月十六）</span>
 animal: 戊寅年 虎
 zodiac: 巨蟹座
 ---
