--- a/Birthday/杨沫.md
+++ b/Birthday/杨沫.md
@@ -3,7 +3,7 @@ birthdaySolar: 2012-10-01
 birthdayLunar: 二〇一二年八月十六
 birthdayType: 公历
 nextBirthday: 2025-10-01
-nextBirthdayString: 公历：2025-10-01 <span style="color:#086ddd">（对应农历：二〇二五年八月初十）</span>
+nextBirthdayString: 公历：2025-10-01 <span style="color:#086ddd">（农历：二〇二五年八月初十）</span>
 animal: 壬辰年 龙
 zodiac: 天秤座
 ---
