--- a/Birthday/赵虎.md
+++ b/Birthday/赵虎.md
@@ -3,7 +3,7 @@ birthdaySolar: 2000-02-05
 birthdayLunar: 一九九九年腊月三十
 nextBirthday: 2025-01-28
 birthdayType: 农历
-nextBirthdayString: 公历：2025-01-28 <span style="color:#086ddd">（对应农历：二〇二四年腊月廿九）</span>
+nextBirthdayString: 公历：2025-01-28 <span style="color:#086ddd">（农历：二〇二四年腊月廿九）</span>
 animal: 己卯年 兔
 zodiac: 水瓶座
 ---
