--- a/Birthday/李四.md
+++ b/Birthday/李四.md
@@ -3,7 +3,7 @@ birthdaySolar: 2022-03-01
 birthdayLunar: 二零二二年正月廿九
 birthdayType: 农历
 nextBirthday: 2025-02-26
-nextBirthdayString: 公历：2025-02-26 <span style="color:#086ddd">（对应农历：二〇二五年正月廿九）</span>
+nextBirthdayString: 公历：2025-02-26 <span style="color:#086ddd">（农历：二〇二五年正月廿九）</span>
 animal: 壬寅年 虎
 zodiac: 双鱼座
 ---
